--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+
+        .container{
+            border: 1px solid black;
+            height: 900px;
+            width: 400px;
+        }
+
+        .box1 .box2{
+            border: 1px solid red;
+            height:50px;
+            width: 100px;
+            }
+
+
+    </style>
 </head>
 <body>
-    Hi atharv
+    <div class="container">
+        <div class="box1"></div>
+        <div class="box2"></div>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
