--- a/index.html
+++ b/index.html
@@ -4,28 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-
-        .container{
-            border: 1px solid black;
-            height: 900px;
-            width: 400px;
-        }
-
-        .box1 .box2{
-            border: 1px solid red;
-            height:50px;
-            width: 100px;
-            }
-
-
-    </style>
 </head>
 <body>
-    <div class="container">
-        <div class="box1"></div>
-        <div class="box2"></div>
-    </div>
-    <script src="index.js"></script>
+    <section>
+<h1>User Details</h1>
+<h3>Welcome To the Quiz</h3>
+<input type="text" placeholder="Enter Your Name">
+<button>Enter</button>
+
+
+    </section>
+    <section>
+
+        <h2>Category</h2>
+        <h4>Pipes & Cisterms</h4>
+        <h4>Probability Button</h4>
+        <h4>Problems on Age Button</h4>
+        <h4>Profit & Loss Button</h4>
+    </section>
 </body>
 </html>
